# esp32-epaper-monitor

./: .gitignore  CMakeLists.txt  EPAPER_UI_NOTES.md  README.md  common.ini  partitions16.csv  partitions4.csv  platformio.ini  sdkconfig.common  sdkconfig.defaults  sdkconfig.esp32  sdkconfig.esp32-s3-devkitc-1  sdkconfig.nodemcu-32s  sdkconfig.s3  secrets.example.ini
.codebuddy/plan/epaper-scrutiny-monitor/: requirements.md
docs/: 213_UI_NOTES.md  413_UI_NOTES.md  EPAPER_UI_NOTES.md  pinout.md
include/: config.h
src/: CMakeLists.txt  disks.cpp  disks.hpp  display.cpp  display.hpp  epd_gfx.cpp  epd_gfx.hpp  epd_ssd1675a.cpp  epd_ssd1675a.hpp  font5x7.h  idf_component.yml  main.cpp  scrutiny_fetch.cpp  scrutiny_fetch.hpp  web_server.cpp  web_server.hpp  wifi_sta.cpp  wifi_sta.hpp
src/icons/: cap_bitmap.h  nvme_bitmap.h  sata_bitmap.h  temp_bitmap.h
tools/: bitmap_icon.py
